apps/audiobookshelf/manifests/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: audiobookshelf
  namespace: audiobookshelf
spec:
  parentRefs:
    - name: main
      namespace: traefik
  hostnames:
    - audiobookshelf.k8s.hyperion.internal
    - audiobookshelf.internal
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: audiobookshelf
          port: 80
